fix: removed overflow and reset debug.js

--- a/packages/ketchup/src/components/kup-dialog/kup-dialog.scss
+++ b/packages/ketchup/src/components/kup-dialog/kup-dialog.scss
@@ -36,7 +36,6 @@
   -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
   -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
   box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px;
-  overflow: scroll;
 }
 
 #kup-component {
